remove relative to fix it on ios devices

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -724,7 +724,7 @@ foreignObject {
 
 .city-container {
   .details {
-    position: relative;
+    // position: relative;
     background-color: white;
     display: flex;
     align-items: center;
